JPUI-3 | Fixed Wizard Footer Intermediate/Terminal Step Progress Alignment

--- a/src/styles/sass/components/layout/wizard/footer/PlayWizardFooter.module.scss
+++ b/src/styles/sass/components/layout/wizard/footer/PlayWizardFooter.module.scss
@@ -16,3 +16,7 @@
   align-items: center;
   justify-content: center;
 }
+
+.buttonWrapper {
+  width: 60px;
+}
